@@ -1,2 +1,45 @@
 # 2D Java game - Level-One
-Development of a 2D video game allowing control and interaction of a character within a world populated by creatures, NPCs, and objects in Java.
+Bienvenue dans Level One ! Dans ce jeu, vous incarnez un chevalier 
+brave et courageux dont la mission est de sauver le roi capturé par des 
+monstres. Vous devrez combattre des ennemis, collecter des potions 
+et naviguer à travers deux niveaux de donjons pour atteindre votre 
+objectif. 
+# 1. Contrôles 
+Flèche Haut : Déplacer vers le haut 
+Flèche Bas : Déplacer vers le bas 
+Flèche Gauche : Déplacer vers la gauche 
+Flèche Droite : Déplacer vers la droite 
+Espace : Attaquer 
+E : Ouvrir l'inventaire 
+# 2. Mécaniques du jeu 
+A) La Santé : La barre de santé du joueur est représentée en vert. La 
+santé maximale du joueur est de 200. Vous pouvez récupérer de la 
+santé en utilisant des potions de santé. 
+B) L'Attaque : La barre d'attaque du joueur est représentée en rouge. 
+La puissance d'attaque maximale du joueur est de 300. Utilisez des 
+potions d'attaque pour augmenter votre puissance d'attaque.  
+C) Potions : Collectez des potions pour améliorer votre santé ou votre 
+attaque. Vous pouvez stocker ou utiliser les potions en les ramassant 
+ou en les récupérant dans votre inventaire. 
+D) Ennemis : Combattez divers types de monstres avec différentes 
+quantités de santé et de dommages. Les monstres laissent tomber des 
+potions lorsqu'ils meurent. 
+E) Objectif : Battez tous les monstres et sauvez le roi pour gagner le 
+jeu. 
+# 3. Inventaire 
+Appuyez sur la touche 'E' pour ouvrir votre inventaire. Vous pouvez voir 
+les potions que vous avez collectées et les utiliser pour récupérer de la 
+santé ou augmenter votre attaque. 
+# 4. Fin du jeu et redémarrage 
+Si votre santé tombe à zéro, le jeu est terminé. Vous verrez un écran 
+'Game Over' avec une option pour redémarrer le jeu. Cliquez sur 
+'Rejouer' pour recommencer le jeu depuis le début. 
+# 5. Compilation et exécution 
+Pour compiler le programme, cette commande est nécessaire : 
+Javac --module-path chemin\openJFX\javafx-sdk-22\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics 
+*.java 
+Pour exécuter le programme, cette commande est nécessaire : 
+java --module-path chemin\openJFX\javafx-sdk-22\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics Main 
+# 6. Conclusion 
+Utilisez vos compétences et vos ressources à bon escient pour vaincre 
+les monstres et sauver le roi.
